# TagManager2

./: .gitignore  CMakeLists.txt  README.md  TagManager.cpp  TagManager.h  TagManager.sln  main.cpp  tags.json
.github/workflows/: build.yml  release.yml
